welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: Unit does not take parameters
def faireV {gauche();avance();marquerSol();droite();
                                        ^PictureMono:5: error: Unit does not take parameters
             avance();droite();avance();marquerSol();
                                                  ^PictureMono:7: error: Unit does not take parameters
             marquerSol();droite();droite();avance();
                       ^PictureMono:11: error: not found: value faireV
	faireV();
        ^